FIX (anim): fix empty tile animation on board resize

--- a/src/components/board/Tile.scss
+++ b/src/components/board/Tile.scss
@@ -22,7 +22,7 @@
 .tile-empty {
   box-shadow: 1px 1px 22px #000 inset;
   opacity: .5;
-  transition: all 1s ease;
+  //transition: all 3ms ease;
 }
 
 .tile-empty:hover {
