--- a/src/components/hall-of-fame/hall-of-fame.scss
+++ b/src/components/hall-of-fame/hall-of-fame.scss
@@ -30,4 +30,33 @@
 	border-radius: 3px;
 	font-weight: 700;
   }
+
+  input[type="search"] {
+	padding: 5px;
+	line-height: 11px;
+	border: 1px solid $color-secondary;
+	font-size: 16px;
+	border-radius: 3px;
+	width: 100%;
+	color: $color-secondary;
+	&::-webkit-input-placeholder { /* Chrome */
+	  color: $color-secondary;
+	  opacity: .5;
+	}
+	&:-ms-input-placeholder { /* IE 10+ */
+	  color: $color-secondary;
+	  opacity: .5;
+	}
+	&::-moz-placeholder { /* Firefox 19+ */
+	  color: $color-secondary;
+	  opacity: .5;
+	}
+	&:-moz-placeholder { /* Firefox 4 - 18 */
+	  color: $color-secondary;
+	  opacity: .5;
+	}
+	&:focus {
+	  outline: none;
+	}
+  }
 }
